--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -12,3 +12,13 @@
 .chat__container__content__column {
   max-height: 100%;
 }
+
+div.noPadding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+div.noMargin {
+  margin-left: 0;
+  margin-right: 0;
+}
