--- a/src/components/messages_window/messages_window.scss
+++ b/src/components/messages_window/messages_window.scss
@@ -1,11 +1,11 @@
-$messages_window_background_color: rgb(234, 234, 234);
+@import '../../styles/colors';
 
 .messages-window {
   padding: 5% 20%;
   height: 100%;
 
   &__window {
-    background: $messages_window_background_color;
+    background: $messages-window-background-color;
     overflow-y: scroll;
     height: 90%;
   }
