--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,16 +1,18 @@
+@import '../../styles/colors';
+
 .chat__container {
   width: 60rem;
   height: 30rem;
   margin-top: 10rem;
-  border: 1px solid black;
-}
+  border: 1px solid $chat-border;
 
-.chat__container__content {
-  height: 100%;
-}
+  &__content {
+    height: 100%;
+  }
 
-.chat__container__content__column {
-  max-height: 100%;
+  &__content__column {
+    max-height: 100%;
+  }
 }
 
 div.noPadding {
