[T-3] added layout & some style fixes

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -8,19 +8,8 @@
 
   &__content {
     height: 100%;
+    &__column {
+      max-height: 100%;
+    }
   }
-
-  &__content__column {
-    max-height: 100%;
-  }
-}
-
-div.noPadding {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-div.noMargin {
-  margin-left: 0;
-  margin-right: 0;
 }
