--- a/src/components/user/user.scss
+++ b/src/components/user/user.scss
@@ -1,9 +1,7 @@
 @import '../../styles/colors';
 
 .user {
-    display: flex;
-    flex-direction: row;
-    margin: 1rem;
+    padding: 1rem 1rem 0 1rem;
 
     &__status {
         width: 1rem;
