--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,8 +1,7 @@
 @import '../../styles/colors';
 
 .chat__container {
-  width: 60rem;
-  height: 30rem;
+  min-height: 30rem;
   margin-top: 10rem;
   border: 1px solid $chat-border;
 
