--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,8 +1,7 @@
 @import '../../styles/colors';
 
 .chat__container {
-  min-height: 30rem;
-  margin-top: 10rem;
+  margin-top: 150px;
   border: 1px solid $chat-border;
 
   &__content {
@@ -10,5 +9,11 @@
     &__column {
       max-height: 100%;
     }
+  }
+}
+
+@media (min-height: 720px) {
+  .chat__container__content {
+    min-height: 530px;
   }
 }
